# MedNLPix

./: .gitignore  README.md  pyproject.toml
data/processed/: test.csv  train.csv
data/raw/: medical-abstracts-dataset.csv
notebooks/: 01_eda_medical.ipynb
notebooks/models/: registry.json
notebooks/models/artifacts/: logreg_tfidf_20251008_122414.joblib  logreg_tfidf_20251008_122542.joblib
src/mednlpix/data/: __init__.py  loader.py  splitter.py
src/mednlpix/features/preprocessing/: __init__.py  base.py  medical_preprocessor.py  spacy_preprocessor.py  text_cleaner.py
src/mednlpix/features/preprocessing/setup/: nltk_setup.py
src/mednlpix/features/vectorization/: __init__.py  base_vectorizer.py  tfidf_vectorizer.py  word2vec_vectorizer.py
src/mednlpix/logger/: logger.py
src/mednlpix/pipelines/: preprocessing_pipeline.py  registry_manager.py
src/mednlpix/training/: base_model_trainer.py
src/mednlpix/utils/: __init__.py  path_utils.py
